--- a/roles/machinePrep/tasks/redhat.yml
+++ b/roles/machinePrep/tasks/redhat.yml
@@ -1,34 +1,2 @@
 ---
-- include_tasks: setupRHsubs.yml
-  when: setup_rh_subs
-
-- name: setup SSH key
-  authorized_key:
-    user: "{{ ansible_user }}"
-    state: present
-    key: '{{ item }}'
-  with_file:
-    - "{{ ssh_pub_key_file }}"
-
-- name: Install base packages
-  yum:
-    name: "{{ packages }}"
-    update_cache: yes
-    state: latest
-  vars:
-    packages:
-    - ansible
-    - wget
-    - git
-    - net-tools
-    - bind-utils
-    - yum-utils
-    - bash-completion
-    - python-docker-py
-
-# apparently jq has no presence in RH repos
-- name: install jq
-  shell: "cd /usr/bin; wget -O jq https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64; chmod +x ./jq"
-
-- name: Reboot machine with latest packages
-  reboot:
+- debug: msg="Not implemented yet"
