--- a/roles/machinePrep/tasks/debian.yml
+++ b/roles/machinePrep/tasks/debian.yml
@@ -1,29 +1,44 @@
 ---
 - name: Install apt packages
   apt:
-    name: "{{ item }}"
+    name: "{{ packages }}"
     state: latest
     update_cache: yes
-  with_items:
-   - sudo
-   - jq
-   - curl
-   - git
-   - apt-transport-https
-   - ca-certificates
-   - gnupg2
-   - software-properties-common
-   - python-apt
+  vars:
+    packages:
+     - apt-transport-https
+     - python-apt
+     - ca-certificates
+     - curl
+     - software-properties-common
 
-- name: Install PIP
-  easy_install:
-    name: pip
-    state: latest
+# adding the word 'universe' to the end of all lines in source.list
+# allows installation of pip
+- name: add universe category to lines in bionic apt repo source list
+  shell: |
+    cd /etc/apt
+    cp sources.list sources.list.bak
+    rm sources.list
+    touch sources.list
+    cat sources.list.bak | awk '/main$/ { print $0 " universe" }' >> sources.list
 
-- name: install Ansible Dependencies
-  pip:
-    name: " {{ item }}"
+- name: Update apt cache
+  apt:
+    update_cache: yes
+
+- name: install Ansible Dependencies 
+  apt:
+    name: "{{ packages }}"
     state: latest
-  with_items:
-    - virtualenv
-    - python-apt
+    update_cache: yes
+  vars:
+    packages:
+      - python-pip
+
+# apparently jq has no presence in apt repos
+- name: install jq
+  get_url:
+    url: https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64
+    dest: /usr/bin/jq
+    mode: 0555
+
